syntax = "proto3";

package auction.auction;

option go_package = "auction/x/auction/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateAuction (MsgCreateAuction) returns (MsgCreateAuctionResponse);
}
message MsgCreateAuction {
  string creator = 1;
  string name    = 2;
  string endAt   = 3;
  string minBid  = 4;
}

message MsgCreateAuctionResponse {
  string auctionIndex = 1;
}

